fix layout issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,16 @@ html,
 body {
   margin: 0;
   padding: 0;
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
+img,
+.hero__image,
+.block-showcase__image,
+.testimonial__image > img {
+  max-width: 100%;
+  height: auto;
 }
 
 /* Colors */
@@ -616,13 +626,16 @@ a {
 .hero__image {
   width: 100%;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 760px) {
   .hero {
     padding-top: 0;
   }
   .hero__content {
     text-align: left;
     align-self: center;
+  }
+  .hero .block__heading{
+    font-size: 5rem;
   }
 }
 
